Fix script and now support all java version > 6